# DigitRecognition

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Lib/: linalg.hpp  mvector.hpp  neuralnet.hpp  timer.cpp  timer.hpp
